# spiderwire

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: device-map.md  hw-notes.md  protocol-analysis.md
src/gss_ctrl_pc/: __init__.py  __main__.py
src/spiderwire/: __init__.py  bus.py  protocol.py  registers.py  transport.py
tests/: test_bus.py  test_protocol.py  test_registers.py
