[project]
name = "spiderwire"
version = "0.1.0"
description = "SpiderWire — SpiderFarmer GSS Modbus protocol library + gss-ctrl CLI"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [{ name = "1AM" }]
keywords = [
    "modbus",
    "modbus-rtu",
    "rs485",
    "spiderfarmer",
    "gss",
    "home-assistant",
    "grow",
    "horticulture",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Home Automation",
    "Topic :: System :: Hardware :: Hardware Drivers",
    "Topic :: Terminals :: Serial",
    "Typing :: Typed",
]
dependencies = ["pyserial>=3.5"]

[project.scripts]
gss-ctrl = "gss_ctrl_pc.__main__:main"

[project.urls]
Homepage = "https://github.com/1am/spiderwire"
Source = "https://github.com/1am/spiderwire"
Issues = "https://github.com/1am/spiderwire/issues"
Changelog = "https://github.com/1am/spiderwire/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/spiderwire", "src/gss_ctrl_pc"]

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "docs/",
    "tests/",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "pyproject.toml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-ra", "--strict-markers"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E501"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.5",
    "build>=1.0",
    "twine>=5.0",
]
